--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 img {
   width: 100%;
+  min-height: 250px;
+  max-height: 300px;
+  object-fit: cover;
   height: auto;
   transition: 0.3s ease-in all;
   -webkit-transition: 0.3s ease-in all;
