--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ img {
   width: 100%;
   min-height: 300px;
   max-height: 300px;
-  object-fit: cover;
+  object-fit: contain;
   height: auto;
   transition: 0.3s ease-in all;
   -webkit-transition: 0.3s ease-in all;
